fix search-input position on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -1,244 +1,244 @@
 * {
-    margin: 0;
+  margin: 0;
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    width: 100%;
-    height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
+  height: 100%;
 }
 
-button, a {
-    cursor: pointer;
+button,
+a {
+  cursor: pointer;
 }
 
 #wrapper {
-    position: relative;
+  position: relative;
 }
 
 #nav-bar {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding: 12px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 12px;
 }
 
 .nav-links {
-    margin: 0 10px;
-    font-size: 13px;
-    cursor: pointer;
+  margin: 0 10px;
+  font-size: 13px;
+  cursor: pointer;
 }
 
 .nav-links > button {
-    outline: 0;
-    border: 0;
-    background: #1a73e8;
-    border: 1px solid transparent;
-    text-align: center;
-    min-width: 96px;
-    border-radius: 3px;
-    height: 35px;
-    color: #fff;
-    font-size: 14px;
+  outline: 0;
+  border: 0;
+  background: #1a73e8;
+  border: 1px solid transparent;
+  text-align: center;
+  min-width: 96px;
+  border-radius: 3px;
+  height: 35px;
+  color: #fff;
+  font-size: 14px;
 }
 
 .nav-links > button:hover {
-    box-shadow: 2px 2px 2px 2px #1a73e8;
+  box-shadow: 2px 2px 2px 2px #1a73e8;
 }
 
 #main {
-    position: relative;
-    margin: 20px 20%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  position: relative;
+  margin: 20px 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 #google-search-input {
-    width: 600px;
-    height: 40px;
-    border-radius: 40px;
-    outline: 0;
-    border: 0;
-    border: 1px solid #cfcfcf;
-    padding-left: 50px;
-    padding-right: 20px;
-    font-size: 16px;
-    margin-bottom: 30px;
+  position: relative;
+  z-index: 1;
+  width: 600px;
+  height: 40px;
+  border-radius: 40px;
+  outline: 0;
+  border: 0;
+  border: 1px solid #cfcfcf;
+  padding-left: 50px;
+  padding-right: 20px;
+  font-size: 16px;
+  margin-bottom: 30px;
 }
 
 .search-icons {
-    position: absolute;
+  position: absolute;
+  z-index: 2;
 }
 
 .icons {
-    width: 22px;
-    height: 22px;
+  width: 22px;
+  height: 22px;
 }
 
 .search-icons#one {
-    margin-left: 20px;
-    padding: 12px 0;
+  margin-left: 20px;
+  padding: 12px 0;
 }
 
 .search-icons#two {
-    margin-left: -45px;
-    padding: 12px 0;
+  margin-left: -45px;
+  padding: 12px 0;
 }
 
-
 #google-search-btns {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #google-search-btns .btn {
-    outline: 0;
-    border: 0;
-    font-size: 14px;
-    padding: 10px 15px;
-    margin: 5px;
-    border-radius: 3px;
+  outline: 0;
+  border: 0;
+  font-size: 14px;
+  padding: 10px 15px;
+  margin: 5px;
+  border-radius: 3px;
 }
 
 #google-search-btns .btn:hover {
-    box-shadow: 2px 2px 2px #929292;
+  box-shadow: 2px 2px 2px #929292;
 }
 
 small {
-    margin-top: 20px;
-    text-align: center;
-    padding: 10px 15px;
+  margin-top: 20px;
+  text-align: center;
+  padding: 10px 15px;
 }
 
 small a {
-    color: #00076d;
-    padding: 0 5px;
+  color: #00076d;
+  padding: 0 5px;
 }
 
 #main .logo {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background-color: #eeeeee;
-    color: #929292;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: #eeeeee;
+  color: #929292;
 }
 
 footer h3 {
-    font-size: 15px;
-    font-weight: 500;
-    padding: 15px 30px;
-    border: 1px solid #dfdfdf;
+  font-size: 15px;
+  font-weight: 500;
+  padding: 15px 30px;
+  border: 1px solid #dfdfdf;
 }
 
 #footer-links {
-    display: flex;
-    justify-content: space-between;
-    padding: 15px 30px;
-    font-size: 14px;
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 30px;
+  font-size: 14px;
 }
 
 #left-links span {
-    margin-right: 35px;
+  margin-right: 35px;
 }
 
 #right-links span {
-    margin-left: 35px;
+  margin-left: 35px;
 }
 
-@media(max-width: 700px){
-    #google-search-input {
-        max-width: 400px;
-    }
+@media (max-width: 700px) {
+  #google-search-input {
+    max-width: 400px;
+  }
 }
 
-@media(max-width: 515px) {
-    #google-search-input {
-        max-width: 300px;
-    }
+@media (max-width: 515px) {
+  #google-search-input {
+    max-width: 300px;
+  }
 }
 
-@media(max-width: 412px) {
-    #google-search-input {
-        max-width: 260px;
-    }
+@media (max-width: 412px) {
+  #google-search-input {
+    max-width: 260px;
+  }
 
-    #main {
-        margin: 20px 5%;
-    }
+  #main {
+    margin: 20px 5%;
+  }
 
-    #footer-links {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        font-size: 13px;
-    }
+  #footer-links {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 13px;
+  }
 
-    #left-links span,
-    #right-links span {
-        margin-right: 0;
-        padding: 0 5px;
-        margin-left: 0;
-    }
+  #left-links span,
+  #right-links span {
+    margin-right: 0;
+    padding: 0 5px;
+    margin-left: 0;
+  }
 
-    #left-links, #right-links {
-        display: flex;
-        justify-content: space-evenly;
-    }
-
-    
-
+  #left-links,
+  #right-links {
+    display: flex;
+    justify-content: space-evenly;
+  }
 }
 
-@media(max-width: 320px) {
-    #google-search-input {
-        max-width: 220px;
-        height: 35px;
-    }
+@media (max-width: 320px) {
+  #google-search-input {
+    max-width: 220px;
+    height: 35px;
+  }
 
-    #main .logo {
-        width: 80px;
-        height: 80px;
-        object-fit: contain;
-        margin-bottom: 0px;
-    }
+  #main .logo {
+    width: 80px;
+    height: 80px;
+    object-fit: contain;
+    margin-bottom: 0px;
+  }
 
-    .icons {
-        width: 20px;
-        height: 20px;
-    }
+  .icons {
+    width: 20px;
+    height: 20px;
+  }
 
-    .search-icons#one {
-        margin-left: 15px;
-        padding: 10px 0;
-    }
+  .search-icons#one {
+    margin-left: 15px;
+    padding: 10px 0;
+  }
 
-    .search-icons#two {
-        margin-left: -40px;
-        padding: 10px 0;
-    }
+  .search-icons#two {
+    margin-left: -40px;
+    padding: 10px 0;
+  }
 
-    .nav-links {
-        font-size: 12px;
-    }
+  .nav-links {
+    font-size: 12px;
+  }
 
-    .nav-links>button {
-        font-size: 12px;
-    }
+  .nav-links > button {
+    font-size: 12px;
+  }
 
-    footer h3 {
-        font-size: 12px;
-    }
+  footer h3 {
+    font-size: 12px;
+  }
 
-    #footer-links {
-        font-size: 12px;
-    }
-
+  #footer-links {
+    font-size: 12px;
+  }
 }
